tests/error/tracing_errors/comptime_flag_control_call.py
from guppylang import guppy, qubit


@guppy.declare
def foo(x: qubit) -> None: ...


@guppy.comptime(controllable=True)
def test(x: qubit) -> None:
    foo(x)


test.compile_function()
